--- a/index.html
+++ b/index.html
@@ -11,25 +11,30 @@
 </head>
 
 <body>
-    <section class="stream">
-        <video class="stream video"></video>
+    <main class="app">
+        <video class="video"></video>
+        <menu class="options">
+            <button class="snap-btn">Take a Snapshot in
+                <span class="countdown"></span>secs</button>
+            <input type="checkbox" name="mirror" id="mirror">
+            <label for="mirror">Mirror mode</label>
 
-    </section>
-    <section class="snapshots"></section>
+            <label for="filters">Filters</label>
+            <select name="filters" id="filters">
+                <option value="none" selected>None</option>
+                <option value="grayscale(100%)">Grayscale</option>
+                <option value="invert(100%)">Invert</option>
+                <option value="sepia(60%)">Retro</option>
+                <option value="contrast(200%)">High Contrast</option>
+                <option value="contrast(50%)">Low Contrast</option>
+            </select>
+        </menu>
+        <section class="snapshots"></section>
+    </main>
 
-    <button class="snap-btn">Take a Snapshot</button>
-    <label for="mirror">Mirror</label>
-    <input type="checkbox" name="mirror" id="mirror">
-    <label for="filters">Filters</label>
 
-    <select name="filters" id="filters">
-        <option value="none" selected>None</option>
-        <option value="grayscale(100%)">Grayscale</option>
-        <option value="invert(100%)">Invert</option>
-        <option value="sepia(60%)">Retro</option>
-        <option value="contrast(200%)">High Contrast</option>
-        <option value="contrast(50%)">Low Contrast</option>
-    </select>
+
+
 </body>
 
 </html>
