added noscript tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <noscript>
+        <h1>This page needs JavaScript enabled to work</h1>
+    </noscript>
     <main class="app">
         <video class="video" title="Click to take a snap!"></video>
         <menu class="options">
