changed text and title of mirror button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <span class="camera-icon">📷</span>
                 <span class="countdown"></span> secs</button>
 
-            <label class="btn mirror-btn" title="Display webcam feed as mirror image" for="mirror">
-                <input type="checkbox" class="mirror-btn-input" name="mirror" id="mirror"> Mirror mode</label>
+            <label class="btn mirror-btn" title="Switch between original and mirrored webcam feed" for="mirror">
+                <input type="checkbox" class="mirror-btn-input" name="mirror" id="mirror">Flip image</label>
 
             <select class="btn filter-select" title="Select a filter effect" name="filters" id="filters">
                 <option value="none" selected>No filter</option>
