added more detail to explanation

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         </menu>
         <section class="snapshots" data-trigger-hint="CLICK on the camera feed, press the SPACEBAR or use the DELAY BUTTON to take a snapshot!"
-            data-usage-hint="ℹ Hover or tap a snapshot to download or delete it"></section>
+            data-usage-hint="ℹ Hover or tap a snapshot to download or delete it. Snapshots are not automatically saved and will be lost on reload."></section>
         <footer class="footer">Made with ❤️ and ☕ in 2018 by
             <a href="https://github.com/luke-codewalker/websnaps" target="_blank" rel="noreferrer noopener">Lukas Eschstruth</a>
         </footer>
